--- a/sec/deepsmith.tex
+++ b/sec/deepsmith.tex
@@ -20,7 +20,7 @@ For each source in the training data, the source is pre-processor to inline macr
 Finally, a uniform code style is enforced to ensure consistent use of braces, parentheses, and white space.
 
 
-\paragraph{Encoding} The preprocessed corpus is encoded using a hybrid token/character-level encoding~\cite{Cummins2017b}. \cc{More detail\ldots}
+\paragraph{Encoding} The preprocessed corpus is encoded using a hybrid token/character-level encoding, extended from prior work in learning compiler optimizations~\cite{Cummins2017b}. \cc{More detail\ldots}
 
 
 \paragraph{Network Architecture} We use the Long Short-Term Memory (LSTM) architecture of Recurrent Neural Network to model program code~\cite{Hochreiter1997}. The LSTM architecture
