--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -35,14 +35,12 @@ While CSmith has been successfully used to identify hundreds of bugs in compiler
 % --- to date, important language features such as strings, dynamic memory allocation, function pointers, and recursion are unsupported.
 % , despite the large overlap between C and OpenCL (which is C with extensions). This huge development cost is extended to the reduction tools too, with CLReduce~\cite{Pflanzer2016} requiring extensions to OCLgrind.
 
-\cc{What is needed\ldots}
+% \cc{What is needed\ldots}
 
-What we propose instead is a fast, easy, and low effort approach to the generation of random programs for compiler fuzzing. Our methodology uses recent advances in deep learning to automatically construct probabilistic models of how humans write code, instead of painstakingly defining a grammar to the same end. By training a deep neural network on a corpus of handwritten code, it is able to infer both the syntax and semantics of the programming language and the common constructs and patters. Our approach essentially frames the generation of random programs as a language modeling problem. This greatly simplifies and accelerates the process. The expressiveness of the generated programs is limited only by what is contained in the corpus, not the developer's expertise or available time. Such a corpus can readily be assembled from open source repositories.
+What we propose is a fast, easy, and low effort approach to the generation of random programs for compiler fuzzing. Our methodology uses recent advances in deep learning to automatically construct probabilistic models of how humans write code, instead of painstakingly defining a grammar to the same end. By training a deep neural network on a corpus of handwritten code, it is able to infer both the syntax and semantics of the programming language and the common constructs and patters. Our approach essentially frames the generation of random programs as a language modeling problem. This greatly simplifies and accelerates the process. The expressiveness of the generated programs is limited only by what is contained in the corpus, not the developer's expertise or available time. Such a corpus can readily be assembled from open source repositories.
 
 
 %Using a corpus of handwritten code in a particular programming language, we use deep neural networks to automatically construct probabilistic models for how humans write programs. The neural networks, without prior knowledge, infer both the syntax and semantics of the programming language and the common constructs and patterns. By framing the generation of random programs as a language modeling problem, we greatly simplify the process of program generation, and the expressiveness of generated programs is limited only by what is contained in the corpus. Such a corpus can readily be assembled from open source repositories.
-
-\cc{TODO: syntactic modeling trade-off}
 
 Our implementation, DeepSmith, targets OpenCL, an open standard for programming heterogeneous systems, though our approach is language agnostic. We chose OpenCL for three reasons: it is an emerging standard with the challenging promise of portability across a diverse range of heterogeneous hardware; OpenCL is compiled ``online'', meaning that compiler defects may not be discovered until a product is deployed to customers; and there has already been extensive work in hand written random program generators for OpenCL. 
 
@@ -82,8 +80,8 @@ We make the following contributions:
 %
 \cc{Check against abstract"}
 \begin{itemize}
-\item a novel, automatic, and fast approach for the generation of expressive random programs for compiler fuzzing. DeepSmith \emph{infers} programming language syntax, structure, and use from real-world examples not through a manually created probabilistic syntax; % CLSmith requires expert-driven development for every language feature supported. 40+k lines of C++ vs a few hundred lines of Python.
-\item through syntactic modeling of handwritten programs, we discover bugs in compilers which the grammar-based approaches cannot, covering more components of the compiler;
+\item a novel, automatic, and fast approach for the generation of expressive random programs for compiler fuzzing. We \emph{infer} programming language syntax, structure, and use from real-world examples, not through a expert-defined grammar; % CLSmith requires expert-driven development for every language feature supported. 40+k lines of C++ vs a few hundred lines of Python.
+\item through syntactic modeling of handwritten programs, we discover bugs in compilers which prior works are unable to, covering more components of the compiler;
 % e.g. ill-formed
 \item we find bugs faster than the state-of-the-art. In 48 hours we discovered and reported XX bugs in compiler and open source OpenCL implementations, XX\% more than CLSmith over the same time period;
 \item in modeling real handwritten code, our test cases are more interpretable than other approaches. Average test case size is two orders of magnitude smaller than state-of-the-art;
