--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -6,16 +6,16 @@
 %\hl{Hugh comment}
 
 \noindent
-Compilers are a fundamental trusted technology. Bugs in them are particularly harmful. They can introduce extremely hard to identify errors in the generated binary. If we detect them early, this just increases development costs. If not, this can cause runtime failures in even carefully tested software. Identifying such bugs before compiler release is of critical importance but is not a straightforward task. Modern optimizing compilers are large and complex programs with a practically infinite scope of possible inputs. Fixed test suites are inadequate for ensuring correct behavior over such a range of inputs.
+Compilers are a fundamental trusted technology. Bugs in them are particularly harmful. They can introduce extremely hard to identify errors in the generated binary. If we detect them early, this just increases development costs. If not, this can cause runtime failures in even carefully tested software. Identifying such bugs before compiler release is of critical importance but is not a straightforward task. Modern optimizing compilers are large and complex programs; tixed test suites are inadequate for ensuring correct behavior over the broad range of possible inputs.
 
-Fuzz testing is a more appropriate approach. When fuzzing, randomly generated valid or semi-valid code is fed to the compiler. Any kind of unexpected behavior, including crashes, freezes, or wrong binaries, indicates a compiler bug. While crashes and freezes are easy to detect, telling correct from wrong output with absolute certainty is not possible in this scenario. The best we can do is Differential Testing~\cite{Chen2014a,Kossatchev2005,Chen2013}. The generated code and a set of inputs, the \emph{test case}, is compiled and executed on multiple \emph{testbeds}. If the test case output of differs between testbeds, then a potential bug has been discovered.
+Random test case generation --- \emph{fuzzing} --- is an effective method for identifying compiler bugs~\cite{Chen2014a,Kossatchev2005,Chen2013}. When fuzzing, randomly generated valid or semi-valid code is fed to the compiler. Any kind of unexpected behavior, including crashes, freezes, or wrong binaries, indicates a compiler bug. While crashes and freezes are easy to detect, telling correct from wrong output with absolute certainty is not possible in this scenario. The best we can do is Differential Testing. The generated code and a set of inputs, the \emph{test case}, is compiled and executed on multiple \emph{testbeds}. If the test case output of differs between testbeds, then a potential bug has been discovered.
 
 Compiler fuzzing boils down to efficiently generating test cases that trigger compiler bugs. The state of the art approach, CSmith~\cite{Yang2011}, generates large random programs by defining and sampling a probabilistic grammar which covers a large subset of the C programming language. Through this grammar, CSmith ensures that the generated code easily passes the compiler front-end and stresses the most complex part of the compiler, the middle end. A complex static and dynamic analysis makes sure that programs are free from undefined behavior. The programs are then differentially tested.
 
 While CSmith has been successfully used to identify hundreds of bugs in compilers, it and similar approaches have a significant drawback. They represent a huge undertaking and require a thorough understanding of the target programming language. CSmith was developed over the course of years, and consists of over 40k lines of handwritten C++ code. By tightly coupling the generation logic with the target programming language, each feature of the grammar must be painstakingly and expertly engineered for each new target language. For example, lifting CSmith from C to OpenCL~\cite{Lidbury2015a} --- a superficially simple task --- took 9 months and 8k lines of code. Given the difficulty of defining a new grammar, typically only a subset of the language is implemented.
 
 
-%Differential Testing is an effective and widely studied methodology for identifying compiler bugs~\cite{Chen2014a,Kossatchev2005,Chen2013}. %Figure~\ref{fig:difftest} shows the approach.
+%Differential Testing is an effective and widely studied methodology for identifying compiler bugs. %Figure~\ref{fig:difftest} shows the approach.
 %A program and a set of inputs, henceforth referred to as a \emph{test case}, is compiled and executed on multiple \emph{testbeds}. If any of the compilers crash or loop indefinitely, or if the output of the programs differs between testbeds, then a potential bug has been discovered. \cc{TODO: Early work in context free grammar enumeration to text syntax analyzers~\cite{Purdom1972,Malloy2001}. These can't test past the compiler front-end. Early program generators~\cite{Zhao2009},\cite{Bryan2007}. Now, CSmith~\cite{Yang2011} and EMI testing~\cite{Le2013a} enable deeper, middle-end testing. The behavior of compilers under invalid inputs is --- to the best of our knowledge --- much less explored topic.}
 
 %\begin{figure}
